Bug 833254 - Fix MFBT's gcc version checks. r=waldo